--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</a>
     <img src="images/image-prodcutt.png" width="80%" />
     <img src="images/image-22.png" width="100%" />
-    <img src="images/imageedit_product12.png" width="80%" />
+    <img src="images/image-prodcut12.jpg" width="100%" />
     <img src="images/image-33.png" width="100%" />
     <a href="http://wa.me/212675410554">
 		<img src="images/image-button.png" width="50%"/>
